added comments and logs in meal service